# coastfi-navigator

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  podman-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  layout.py  main.py
app/auth/: __init__.py  users.py
app/callbacks/: __init__.py  auth.py  calculation.py  persistence.py
app/components/: __init__.py  auth_modal.py  charts.py  inputs.py  milestones.py  scenario_card.py  summary.py
app/db/: __init__.py  crud.py  models.py  session.py
app/engine/: __init__.py  calculator.py  milestones.py  monte_carlo.py
app/pages/: __init__.py  calculator.py  dashboard.py  share.py
migrations/: env.py
migrations/versions/: 04b57f980045_initial_schema.py  f05679e1f472_unique_version_per_scenario.py
scripts/: seed_demo.py
tests/: __init__.py  conftest.py  test_auth.py  test_calculator.py  test_crud.py  test_monte_carlo.py
